# ayuntamiento-chatbot

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  dependencies.txt  docker-compose.yml  mis pasos.txt  pyproject.toml  requirements.txt
app/: README.md  crud.py  database.py  langgraph_utils.py  main.py  models.py  pruebas scrapeo.py  schemas.py  vector_store.py  web_scraper.py
app/app/db/: chroma.sqlite3
app/db/0ba7d950-3125-4504-acfd-55b17f025f51/: index_metadata.pickle
db/: chroma.sqlite3  chroma.sqlite3-journal
migrations/: env.py
tests/: test_main.py
